--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "MotorTrip Calc",
   "short_name": "MotorTrip",
   "description": "Motorbike Camping Cost Estimator",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": "/mtp/",
+  "scope": "/mtp/",
   "display": "standalone",
   "display_override": ["window-controls-overlay", "standalone", "minimal-ui"],
   "orientation": "portrait",
@@ -12,19 +12,19 @@
   "categories": ["lifestyle", "travel", "productivity"],
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "/mtp/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icons/icon-512.png",
+      "src": "/mtp/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icons/apple-icon.png",
+      "src": "/mtp/icons/apple-icon.png",
       "sizes": "180x180",
       "type": "image/png",
       "purpose": "apple touch icon"
@@ -32,7 +32,7 @@
   ],
   "screenshots": [
     {
-      "src": "screenshots/iphone-screenshot.png",
+      "src": "/mtp/screenshots/iphone-screenshot.png",
       "sizes": "1170x2532",
       "type": "image/png",
       "form_factor": "narrow",
@@ -44,15 +44,15 @@
       "name": "New Trip",
       "short_name": "New",
       "description": "Create a new trip calculation",
-      "url": "/?new=true",
-      "icons": [{ "src": "icons/shortcut-new.png", "sizes": "96x96" }]
+      "url": "/mtp/?new=true",
+      "icons": [{ "src": "/mtp/icons/shortcut-new.png", "sizes": "96x96" }]
     },
     {
       "name": "History",
       "short_name": "History",
       "description": "View trip history",
-      "url": "/#history",
-      "icons": [{ "src": "icons/shortcut-history.png", "sizes": "96x96" }]
+      "url": "/mtp/#history",
+      "icons": [{ "src": "/mtp/icons/shortcut-history.png", "sizes": "96x96" }]
     }
   ]
 }
